--- a/Algorithm/2021-05-01.md
+++ b/Algorithm/2021-05-01.md
@@ -41,6 +41,6 @@ const solution = (n) => {
 };
 ```
 
-1. 자연수 N을 받아 문자열로 변환 후 split를 통해 문자열을 배열로 나눈 후 map을 통하여 배열 내의 모든 요소 각각에 대하여 주어진 함수를 호출한 결과를 모아 새로운 배열 arr을 반환하였다.
+1. 자연수 N을 받아 문자열로 변환 후 split를 통해 문자열을 배열로 나눈 후 map을 통하여 배열 내의 모든 요소 각각에 대하여 주어진 함수를 호출한 결과를 모아 새로운 배열 숫자열 arr을 반환하였다.
 
 2. 배열의 각 요소를 하나씩 꺼내 사용자의 함수를 적용시킨 뒤, 그 값을 계속해서 누적시키는 함수인 reduce를 사용하여 각 자릿수의 합을 구하여 그 값을 리턴하였다.
